# Synora

./: .gitignore  CLAUDE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Makefile  PRODUCT_BLOG.md  README.md  SCAFFOLD_SUMMARY.md  docker-compose.init.sh  docker-compose.override.yml.example  docker-compose.yml  health-check.sh  postgres-init.sql  prometheus.yml  quick-start.sh  stop.sh
data-pipeline/: COMPONENT_SUMMARY.md  FILES_CREATED.txt  INDEX.txt  README.md
data-pipeline/airflow-dags/: Dockerfile  consent_enforcement.py  daily_reporting.py  data_quality_checks.py  fingerprint_backfill.py  requirements.txt
data-pipeline/airflow-dags/dags/: data_retention.py  manufacturer_payouts.py  nightly_segmentation.py  sdk_health_check.py
data-pipeline/airflow-dags/plugins/: __init__.py
data-pipeline/airflow-dags/plugins/hooks/: __init__.py  trino_hook.py
data-pipeline/flink-jobs/: pom.xml
data-pipeline/seed/: seed_reference_catalog.py
data-pipeline/seed/catalogs/: demo.json
data-pipeline/seed/scripts/: generate_demo_wavs.py
data-pipeline/spark-jobs/: build.sbt
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  api-reference.md  sdk-integration-guide.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  types.ts
frontend/src/api/: client.ts  mocks.ts
frontend/src/components/: Layout.tsx  SegmentBuilder.tsx
frontend/src/pages/: Campaigns.tsx  Overview.tsx  Reports.tsx  Segments.tsx  Settings.tsx
infra/helm/advertiser-api/: Chart.yaml  values.yaml
infra/helm/billing-service/: Chart.yaml  values.yaml
infra/helm/fingerprint-ingestor/: Chart.yaml  values.yaml
infra/helm/matching-engine/: Chart.yaml  values.yaml
infra/helm/privacy-service/: Chart.yaml  values.yaml
infra/monitoring/: alerts.yaml
infra/monitoring/grafana-dashboards/: acraas-overview.json
infra/terraform/: outputs.tf  variables.tf
sdk/: CMakeLists.txt  DELIVERABLES.md  FILES.md  INDEX.md  MANIFEST.txt  QUICK_START.md  README.md
sdk/android/: AcrJniWrapper.cpp  AcrSdk.kt  CMakeLists.txt  README.md  settings.gradle.kts
sdk/android/sample/: build.gradle.kts
sdk/android/sample/src/main/: AndroidManifest.xml
sdk/android/sample/src/main/kotlin/io/synora/sample/: MainActivity.kt
sdk/android/sample/src/main/res/layout/: activity_main.xml
sdk/android/sdk/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
sdk/android/sdk/src/main/: AndroidManifest.xml
sdk/android/sdk/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
sdk/android/sdk/src/main/kotlin/io/synora/sdk/: SynoraSdk.kt
sdk/android/sdk/src/main/kotlin/io/synora/sdk/internal/: AudioCapturer.kt  ConsentStore.kt  DeviceIdentity.kt  FingerprintCache.kt  IngestClient.kt  NativeFingerprint.kt
sdk/docs/: api-reference.md  build-guide.md  integration-guide.md
sdk/include/: acr.h  acraas.h
sdk/src/: acr.cpp  audio_capture.cpp  audio_capture.hpp  cache.cpp  cache.hpp  client.cpp  consent.cpp  consent.hpp  crypto.cpp  crypto.hpp  device_id.cpp  device_id.hpp  fingerprint.cpp  fingerprint.hpp  network.cpp  network.hpp  test_main.cpp
sdk/tools/: fingerprint_cli.cpp
services/: BUILD_SUMMARY.md
services/advertiser-api/: .env.example  Dockerfile  config.py  main.py  openapi.yaml  requirements.txt
services/advertiser-api/auth/: jwt.py
services/advertiser-api/db/: postgres.py
services/advertiser-api/middleware/: rate_limit.py
services/advertiser-api/models/: openrtb.py  segment.py
services/advertiser-api/routers/: auth.py  reports.py  segments.py  targeting.py
services/advertiser-api/services/: redis_service.py  segment_builder.py
services/billing-service/: Dockerfile  main.py  requirements.txt
services/fingerprint-indexer/: .env  .gitignore  Cargo.toml  Dockerfile  README.md
services/fingerprint-indexer/src/: config.rs  main.rs  models.rs
services/fingerprint-indexer/src/db/: mod.rs  scylla.rs
services/fingerprint-indexer/src/http/: handlers.rs
services/fingerprint-indexer/src/kafka/: consumer.rs
services/fingerprint-ingestor/: .air.toml  .env.example  .gitignore  API.md  BUILD_INSTRUCTIONS.md  Dockerfile  Dockerfile.dev  FILE_MANIFEST.txt  IMPLEMENTATION.md  INDEX.md  Makefile  PROJECT_SUMMARY.txt  QUICK_START.md  README.md  docker-compose.yml  go.mod  go.sum  main.go
services/fingerprint-ingestor/config/: config.go
services/fingerprint-ingestor/geoip/: filter.go
services/fingerprint-ingestor/handler/: health.go  ingest.go
services/fingerprint-ingestor/kafka/: producer.go
services/fingerprint-ingestor/metrics/: prometheus.go
services/fingerprint-ingestor/middleware/: auth.go
services/fingerprint-ingestor/ratelimit/: redis.go
services/fingerprint-ingestor/scripts/: load-test.sh
services/fingerprint-ingestor/tests/: ingest_test.go  integration_test.go
services/matching-engine/: .env  .gitignore  Dockerfile  README.md  __init__.py  app.py  conftest.py  docker-compose.yml  requirements.txt
services/matching-engine/agents/: __init__.py  matcher.py  session_tracker.py
services/matching-engine/lookup/: __init__.py  fingerprint_client.py
services/matching-engine/metrics/: __init__.py  prometheus_metrics.py
services/matching-engine/models/: __init__.py  events.py
services/matching-engine/tests/: test_matcher.py
services/privacy-service/: .env.example  Dockerfile  config.py  main.py  openapi.yaml  requirements.txt
services/privacy-service/db/: models.py
services/privacy-service/models/: consent.py
services/privacy-service/routers/: consent.py  privacy.py
services/privacy-service/services/: audit_log.py  deletion_service.py  redis_service.py  tcf_parser.py
services/segmentation-engine/: Dockerfile  main.py  requirements.txt
tests/: FILE_MANIFEST.txt  IMPLEMENTATION_SUMMARY.md  QUICK_START.sh  README.md  __init__.py  pytest.ini  requirements.txt
tests/e2e/: test_fingerprint_pipeline.py
tests/integration/: __init__.py  conftest.py  test_advertiser_api.py  test_end_to_end.py  test_indexer.py  test_ingestor.py  test_privacy.py
tests/load/: __init__.py  load_test.py  locustfile.py
(+49 files in other folders)
