[package]
name = "fingerprint-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
scylla = "0.11"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
rdkafka = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"
bytes = "1.5"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "fingerprint-indexer"
path = "src/main.rs"
